--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "inklabs/kommerce-laravel",
+    "description": "Zen Kommerce Laravel Sample Application",
+    "keywords": ["commerce", "ecommerce", "store", "framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "support": {
+        "source": "https://github.com/inklabs/kommerce-laravel"
+    },
     "require": {
         "php": ">=5.5.9",
         "inklabs/kommerce-core": "dev-master",
