--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "php artisan key:generate",
+            "vendor/bin/doctrine orm:schema-tool:create"
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
