--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": ">=5.5.9",
         "inklabs/kommerce-core": "dev-master",
+        "inklabs/kommerce-templates": "dev-master",
         "laravel/framework": "5.2.*"
     },
     "require-dev": {
