--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "laravel-elixir": "6.0.0-9"
+  },
+  "dependencies": {
+    "foundation-sites": "^6.2.3"
   }
 }
