--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ Homestead.json
 .idea/*.ids
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/blade.xml
 .idea/vcs.xml
 .idea/dictionaries
 .idea/codeStyleSettings.xml
