Updating to base-bootstrap.

--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,5 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-BASE_TEMPLATE=base
+BASE_TEMPLATE=base-bootstrap
+BOOTSWATCH_THEME=default
