Allow overriding timezone and date/time formats.

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,7 @@ BASE_TEMPLATE=base-bootstrap
 BOOTSWATCH_THEME=default
 
 EASYPOST-API-KEY=your-key-here
+
+STORE_TIMEZONE="America/Los_Angeles"
+STORE_DATE_FORMAT="F j, Y"
+STORE_TIME_FORMAT="g:i a T"
