--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "barryvdh/laravel-ide-helper": "^2.2"
     },
     "autoload": {
         "classmap": [
@@ -39,6 +40,7 @@
         ],
         "post-create-project-cmd": [
             "php artisan key:generate",
+            "php artisan ide-helper:generate",
             "vendor/bin/doctrine orm:schema-tool:create"
         ],
         "post-install-cmd": [
