Updating to new theme structure.

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-BASE_TEMPLATE=base-bootstrap
+THEME=bootstrap
 
 EASYPOST-API-KEY=your-key-here
 
