Moving kommerce configuration to lib.

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,7 @@ MAIL_ENCRYPTION=null
 THEME=bootstrap
 
 EASYPOST-API-KEY=your-key-here
+STRIPE-API-KEY=your-key-here
 
 STORE_TIMEZONE="America/Los_Angeles"
 STORE_DATE_FORMAT="F j, Y"
