--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,16 @@
     "support": {
         "source": "https://github.com/inklabs/kommerce-laravel"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/inklabs/kommerce-templates.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/inklabs/kommerce-core.git"
+        }
+     ],
     "require": {
         "php": ">=5.5.9",
         "inklabs/kommerce-core": "dev-master",
