Adding coupon admin panel.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_script:
   - composer create-project
   - php artisan serve --quiet &> /dev/null &
   - sleep 3
-  - curl http://localhost:8000/dummy-data/create-dummy-product
+  - curl -s http://localhost:8000/dummy-data/create-dummy-product > /dev/null
+  - curl -s http://localhost:8000/dummy-data/create-dummy-coupon > /dev/null
 
 script:
   - vendor/bin/codecept -c vendor/inklabs/kommerce-templates/codeception.yml run
