Enabling twig profiler.

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ STRIPE-API-KEY=your-key-here
 STORE_TIMEZONE="America/Los_Angeles"
 STORE_DATE_FORMAT="F j, Y"
 STORE_TIME_FORMAT="g:ia T"
+
+TWIG_PROFILER_ENABLED=false
+TWIG_DEBUG_ENABLED=false
