--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "php": ">=5.5.9",
         "inklabs/kommerce-core": "dev-master",
         "inklabs/kommerce-templates": "dev-master",
+        "gregwar/captcha": "1.1.1",
         "laravel/framework": "5.2.*"
     },
     "require-dev": {
