Splitting themes into store and admin.

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,8 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-THEME=bootstrap
+STORE_THEME=bootstrap
+ADMIN_THEME=bootstrap
 
 EASYPOST-API-KEY=your-key-here
 STRIPE-API-KEY=your-key-here
