Adding connection to mysql.

--- a/application/.env.example
+++ b/application/.env.example
@@ -4,10 +4,10 @@ APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_HOST=db
+DB_PORT=3307
+DB_DATABASE=kommerce
+DB_USERNAME=kommerce
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
