--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "phpunit/phpunit": "~5.4",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
+        "squizlabs/php_codesniffer": "~2.6",
         "barryvdh/laravel-ide-helper": "^2.2"
     },
     "autoload": {
